--- a/DFC.App.ContactUs/Views/Pages/Index.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/Index.cshtml
@@ -2,6 +2,9 @@
 
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <title>Documents</title>
+</head>
 <body>
     @if (Model.Documents?.Count() > 0)
     {
