--- a/DFC.App.ContactUs/Views/Pages/HtmlHead.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/HtmlHead.cshtml
@@ -17,7 +17,7 @@
     <meta name="description" content="@Model.Description">
 }
 
-@if (!string.IsNullOrWhiteSpace(Model.Description))
+@if (!string.IsNullOrWhiteSpace(Model.Keywords))
 {
     <meta name="keywords" content="@Model.Keywords">
 }
