Corrections from SonarCloud

--- a/DFC.App.ContactUs/Views/Pages/ChatBody.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/ChatBody.cshtml
@@ -1,6 +1,6 @@
 ﻿<div id="chatcontainer" style="width:100%; height: 1200px; -webkit-overflow-scrolling:touch">
     <noscript>
-        <iframe id="webchatframenoscript" src="https://cxdirect.serco.com/visitor/EntryPage.htm" scrolling="no" style="width: 100%; height:100%; border-width: 0px;"></iframe>
+        <iframe id="webchatframenoscript" src="https://cxdirect.serco.com/visitor/EntryPage.htm" title="webchat" scrolling="no" style="width: 100%; height:100%; border-width: 0px;"></iframe>
     </noscript>
 </div>
 
@@ -15,6 +15,7 @@
             iFrame.src = 'https://cxdirect.serco.com/visitor/EntryPage.htm?GAID=' + getCookie('_ga');
             iFrame.style.cssText = 'width: 100%; height:100%; border-width: 0px;';
             iFrame.scrolling = 'no';
+            iFrame.title = 'webchat';
             iFrameContainer.appendChild(iFrame);
         }
     };
