--- a/DFC.App.ContactUs/Views/_ViewImports.cshtml
+++ b/DFC.App.ContactUs/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using DFC.App.ContactUs
+@using DFC.App.ContactUs.Extensions
 @using DFC.App.ContactUs.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
