--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
@@ -3,6 +3,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>EnterYourDetailsViewModel</title>
     <partial name="HtmlHead" model=@Model.HtmlHead />
 </head>
 <body>
