Add missing html templates. Updated webhook unit tests and improved Webhook Added POST unit tests for Pages Post endpoints Renamed utility method

--- a/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
+++ b/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
@@ -2,9 +2,10 @@
     <noscript>
         <iframe id="webchatframenoscript" src="https://cxdirect.serco.com/visitor/EntryPage.htm" title="webchat" scrolling="no" style="width: 100%; height:100%; border-width: 0px;"></iframe>
     </noscript>
+    <iframe id="webchatframenoscript" src="https://cxdirect.serco.com/visitor/EntryPage.htm" title="webchat" scrolling="no" style="width: 100%; height:100%; border-width: 0px;"></iframe>
 </div>
 
-<script>
+@*<script>
     window.onload = function () {
         //Have to inject the iFrame as we cant have html in the <script> block
         //<noscript> iFrame in the markup is use when no JS
@@ -35,4 +36,4 @@
         }
         return "";
     }
-</script>
+</script>*@
