--- a/DFC.App.ContactUs/Views/Chat/ChatView.cshtml
+++ b/DFC.App.ContactUs/Views/Chat/ChatView.cshtml
@@ -11,7 +11,7 @@
     <partial name="ChatBody" />
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-controller="Pages" asp-action="Index">Back to List</a>
     </div>
 </body>
 </html>
