--- a/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsView.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsView.cshtml
@@ -8,10 +8,14 @@
 <body>
     <partial name="Breadcrumb" model=@Model.Breadcrumb />
 
-    <partial name="WhyContactUsBody" model="@Model.WhyContactUsBodyViewModel" />
+    <form asp-route="/pages/why-do-you-want-to-contact-us" method="post">
+
+        <partial name="WhyContactUsForm" model="@Model.WhyContactUsBodyViewModel" />
+
+    </form>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-controller="Pages" asp-action="Index">Back to List</a>
     </div>
 </body>
 </html>
