Added script and css as external files to support web chat. Updated local developer views to use a local layout. Local layout files includes links to the DEV-CDN for JQuery and CSS

--- a/DFC.App.ContactUs/Views/Home/HomeView.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeView.cshtml
@@ -1,22 +1,22 @@
 ﻿@model HomeViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <partial name="HtmlHead" model=@Model.HtmlHead />
-</head>
-<body>
-    <partial name="Breadcrumb" model=@Model.Breadcrumb />
+@{
+    Layout = "_LocalLayout";
 
+    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    {
+        ViewData["Title"] = Model.HtmlHead.Title;
+    }
+}
 
-    <form asp-route="/pages/home" method="post">
+<partial name="Breadcrumb" model=@Model.Breadcrumb />
 
-        <partial name="HomeForm" model="@Model.HomeBodyViewModel" />
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <form asp-route="/pages/home" method="post">
 
-    </form>
+            <partial name="HomeForm" model="@Model.HomeBodyViewModel" />
 
-    <div>
-        <a asp-controller="Pages" asp-action="Index">Back to List</a>
+        </form>
     </div>
-</body>
-</html>
+</div>
