--- a/DFC.App.ContactUs/Views/Chat/ChatView.cshtml
+++ b/DFC.App.ContactUs/Views/Chat/ChatView.cshtml
@@ -1,17 +1,18 @@
 ﻿@model ChatViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <partial name="HtmlHead" model=@Model.HtmlHead />
-</head>
-<body>
-    <partial name="Breadcrumb" model=@Model.Breadcrumb />
+@{
+    Layout = "_LocalLayout";
 
-    <partial name="ChatBody" model="@Model.ChatViewBodyModel" />
+    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    {
+        ViewData["Title"] = Model.HtmlHead.Title;
+    }
+}
 
-    <div>
-        <a asp-controller="Pages" asp-action="Index">Back to List</a>
+<partial name="Breadcrumb" model=@Model.Breadcrumb />
+
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <partial name="ChatBody" model="@Model.ChatViewBodyModel" />
     </div>
-</body>
-</html>
+</div>
