--- a/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/EnterYourDetailsView.cshtml
@@ -1,21 +1,21 @@
 ﻿@model EnterYourDetailsViewModel
+@{
+    Layout = "_LocalLayout";
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <partial name="HtmlHead" model=@Model.HtmlHead />
-</head>
-<body>
-    <partial name="Breadcrumb" model=@Model.Breadcrumb />
+    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    {
+        ViewData["Title"] = Model.HtmlHead.Title;
+    }
+}
 
-    <form asp-route="/pages/enter-your-details" method="post">
+<partial name="Breadcrumb" model=@Model.Breadcrumb />
 
-        <partial name="EnterYourDetailsForm" model="@Model.EnterYourDetailsBodyViewModel" />
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <form asp-route="/pages/enter-your-details" method="post">
 
-        <div>
-            <a asp-controller="Pages" asp-action="Index">Back to List</a>
-        </div>
+            <partial name="EnterYourDetailsForm" model="@Model.EnterYourDetailsBodyViewModel" />
 
-    </form>
-</body>
-</html>
+        </form>
+    </div>
+</div>
