--- a/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsView.cshtml
+++ b/DFC.App.ContactUs/Views/WhyContactUs/WhyContactUsView.cshtml
@@ -1,21 +1,22 @@
 ﻿@model WhyContactUsViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <partial name="HtmlHead" model=@Model.HtmlHead />
-</head>
-<body>
-    <partial name="Breadcrumb" model=@Model.Breadcrumb />
+@{
+    Layout = "_LocalLayout";
 
-    <form asp-route="/pages/why-do-you-want-to-contact-us" method="post">
+    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    {
+        ViewData["Title"] = Model.HtmlHead.Title;
+    }
+}
 
-        <partial name="WhyContactUsForm" model="@Model.WhyContactUsBodyViewModel" />
+<partial name="Breadcrumb" model=@Model.Breadcrumb />
 
-    </form>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <form asp-route="/pages/why-do-you-want-to-contact-us" method="post">
 
-    <div>
-        <a asp-controller="Pages" asp-action="Index">Back to List</a>
+            <partial name="WhyContactUsForm" model="@Model.WhyContactUsBodyViewModel" />
+
+        </form>
     </div>
-</body>
-</html>
+</div>
