--- a/DFC.App.ContactUs/Views/Shared/_LocalCss.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalCss.cshtml
@@ -1,3 +1,6 @@
-﻿<link href="https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit/css/all.min.css" rel="stylesheet" type="text/css" />
+﻿@{
+    var cdnLocation = "https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit";
+}
 
-<link href="~/css/DfcAppContactUs.css" rel="stylesheet" type="text/css" asp-append-version="true" />
+<link href="@cdnLocation/css/all.min.css" rel="stylesheet" type="text/css" />
+
