--- a/DFC.App.ContactUs/Views/Shared/_LocalJs.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/_LocalJs.cshtml
@@ -1,11 +1,11 @@
-﻿<script src="https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit/js/jquerybundle.min.js"></script>
-<script src="https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit/js/all.min.js"></script>
+﻿@{
+    var cdnLocation = "https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit";
+}
+
+<script src="@cdnLocation/js/jquerybundle.min.js"></script>
+<script src="@cdnLocation/js/all.min.js"></script>
 
 <script>window.GOVUKFrontend.initAll()</script>
 
-<script src="https://dev-cdn.nationalcareersservice.org.uk/nationalcareers_toolkit/js/dfcdigital.min.js"></script>
-
-
-<script src="~/js/CompUiUtilties.js" asp-append-version="true"></script>
-<script src="~/js/DfcAppContactUs.js" asp-append-version="true"></script>
-<script src="~/js/CompUiChildApps.js" asp-append-version="true"></script>
+<script src="@cdnLocation/js/dfcdigital.min.js"></script>
+<script src="@cdnLocation/js/compui.min.js"></script>
