--- a/DFC.App.ContactUs/Views/Pages/Document.cshtml
+++ b/DFC.App.ContactUs/Views/Pages/Document.cshtml
@@ -1,107 +1,108 @@
 ﻿@model DocumentViewModel
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <partial name="HtmlHead" model=@Model.HtmlHead />
-</head>
-<body>
-    <partial name="Breadcrumb" model=@Model.Breadcrumb />
+@{
+    Layout = "_LocalLayout";
 
-    <div>
-        <dl class="row">
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.DocumentId)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.DocumentId)
-            </dd>
+    if (!string.IsNullOrWhiteSpace(Model.HtmlHead?.Title))
+    {
+        ViewData["Title"] = Model.HtmlHead.Title;
+    }
+}
 
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.HtmlHead!.Description)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.HtmlHead!.Description)
-            </dd>
+<partial name="Breadcrumb" model=@Model.Breadcrumb />
 
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.HtmlHead!.Keywords)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.HtmlHead!.Keywords)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.HtmlHead!.Title)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.HtmlHead!.Title)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.HtmlHead!.CanonicalUrl)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.HtmlHead!.CanonicalUrl)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.BreadcrumbTitle)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.BreadcrumbTitle)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.IncludeInSitemap)
-            </dt>
-
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.IncludeInSitemap)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Url)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Url)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Content)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.Raw(Model.Content)
-            </dd>
-
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.LastReviewed)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.LastReviewed)
-            </dd>
-
-            @if (Model.AlternativeNames?.Count() > 0)
-            {
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+        <div>
+            <dl class="row">
                 <dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.AlternativeNames)
+                    @Html.DisplayNameFor(model => model.DocumentId)
                 </dt>
                 <dd class="col-sm-10">
-                    <ol>
-                        @foreach (var alternativeName in Model.AlternativeNames)
-                        {
-                            <li><a href="/pages/@alternativeName">@alternativeName</a></li>
-                        }
-                    </ol>
+                    @Html.DisplayFor(model => model.DocumentId)
                 </dd>
-            }
-        </dl>
-    </div>
 
-    <partial name="Body" model=@Model.BodyViewModel />
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.HtmlHead!.Description)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.HtmlHead!.Description)
+                </dd>
 
-    <div>
-        <a asp-action="Index">Back to List</a>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.HtmlHead!.Keywords)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.HtmlHead!.Keywords)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.HtmlHead!.Title)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.HtmlHead!.Title)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.HtmlHead!.CanonicalUrl)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.HtmlHead!.CanonicalUrl)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.BreadcrumbTitle)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.BreadcrumbTitle)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.IncludeInSitemap)
+                </dt>
+
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.IncludeInSitemap)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Url)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Url)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Content)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.Raw(Model.Content)
+                </dd>
+
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.LastReviewed)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.LastReviewed)
+                </dd>
+
+                @if (Model.AlternativeNames?.Count() > 0)
+                {
+                    <dt class="col-sm-2">
+                        @Html.DisplayNameFor(model => model.AlternativeNames)
+                    </dt>
+                    <dd class="col-sm-10">
+                        <ol>
+                            @foreach (var alternativeName in Model.AlternativeNames)
+                            {
+                                <li><a href="/pages/@alternativeName">@alternativeName</a></li>
+                            }
+                        </ol>
+                    </dd>
+                }
+            </dl>
+        </div>
+
+        <partial name="Body" model=@Model.BodyViewModel />
     </div>
-</body>
-</html>
+</div>
