--- a/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
+++ b/DFC.App.ContactUs/Views/Chat/ChatBody.cshtml
@@ -1,17 +1,21 @@
 ﻿@model ChatViewBodyModel
 
-@if (!Model.HideProductionWarning)
-{
-    <div>
-        <div class="sfContentBlock sf-Long-text">
-            <h1 class="govuk-heading-l"><span class="DfcAppContactUs-IsProdWarning">PLEASE NOTE:</span></h1>
-            <p class="govuk-body">
-                This is connected to the
-                <strong><span class="DfcAppContactUs-IsProdHightlight">PROD</span></strong>
-                version of SERCO's webchat - as their test environment (<a href="https://smokefree.serco.com/visitor/EntryPage.htm">https://smokefree.serco.com/visitor/EntryPage.htm</a>) is only spun up when needed.
-            </p>
+@{
+    var sercoTestUrl = "https://smokefree.serco.com/visitor/EntryPage.htm";
+    
+    if (!Model.HideProductionWarning && string.Compare(Model.ChatUrl!.ToString(), sercoTestUrl, true, System.Globalization.CultureInfo.InvariantCulture) != 0)
+    {
+        <div>
+            <div class="sfContentBlock sf-Long-text">
+                <h1 class="govuk-heading-l"><span class="DfcAppContactUs-IsProdWarning">PLEASE NOTE:</span></h1>
+                <p class="govuk-body">
+                    This is connected to the
+                    <strong><span class="DfcAppContactUs-IsProdHightlight">PROD</span></strong>
+                    version of SERCO's webchat - as their test environment (<a href="@sercoTestUrl">@sercoTestUrl</a>) is only spun up when needed.
+                </p>
+            </div>
         </div>
-    </div>
+    }
 }
 
 <div id="chatcontainer">
