improve callback time validation

--- a/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
+++ b/DFC.App.ContactUs/Views/Home/HomeForm.cshtml
@@ -8,7 +8,7 @@
             <h1 class="govuk-fieldset__heading">Contact us</h1>
         </legend>
         <p>
-            Call @Model.ServiceOpenDetailModel.PhoneNumber to speak to an adviser. Lines are open from  @Model.ServiceOpenDetailModel.OpenTimes,  @Model.ServiceOpenDetailModel.OpenDays. Calls are free from landlines and most mobile numbers.
+            Call @Model.ServiceOpenDetailModel.PhoneNumber to speak to an adviser. Lines are open from  @Model.ServiceOpenDetailModel.OpenTimesString,  @Model.ServiceOpenDetailModel.OpenDays. Calls are free from landlines and most mobile numbers.
             Find out more about <a href="https://www.gov.uk/call-charges">call charges and freephone numbers</a>
         </p>
         <p class="govuk-body">
