--- a/DFC.App.ContactUs/Views/Shared/EditorTemplates/String.cshtml
+++ b/DFC.App.ContactUs/Views/Shared/EditorTemplates/String.cshtml
@@ -1,6 +1,9 @@
 ﻿@model string
 
 @{ 
+    const string govukFormGroupErrorClass = "govuk-form-group--error";
+    const string govukInputErrorClass = "govuk-input--error";
+    var showErrorClassForInput = string.Empty;
     var hintId = string.Empty;
     var showErrorClass = string.Empty;
     var errorKey = ViewData.ModelMetadata.PropertyName;
@@ -9,7 +12,8 @@
     {
         if (ViewData.ModelState[errorKey] != null && ViewData.ModelState[errorKey].Errors.Any())
         {
-            showErrorClass = "govuk-form-group--error";
+            showErrorClassForInput = govukInputErrorClass;
+            showErrorClass = govukFormGroupErrorClass;
         }
     }
 }
@@ -30,7 +34,7 @@
 
     @Html.TextBoxFor(model => model, new
     {
-        @class = "govuk-input",
+        @class = "govuk-input " + showErrorClassForInput,
         autocomplete = "off",
         aria_describedby = hintId
     })
