--- a/DFC.App.ContactUs/Views/EnterYourDetails/_CallbackDateTimeEditor.cshtml
+++ b/DFC.App.ContactUs/Views/EnterYourDetails/_CallbackDateTimeEditor.cshtml
@@ -1,18 +1,19 @@
 ﻿@model EnterYourDetailsBodyViewModel
 
 @{
-    const string govukErrorClass = "govuk-form-group--error";
+    const string govukFormGroupErrorClass = "govuk-form-group--error";
+    const string govukInputErrorClass = "govuk-input--error";
     var showErrorClass = string.Empty;
-    var showErrorClassForDay = string.Empty;
-    var showErrorClassForMonth = string.Empty;
-    var showErrorClassForYear = string.Empty;
-    var showErrorClassForHour = string.Empty;
-    var showErrorClassForMinute = string.Empty;
-    var nameFieldForDay = Html.NameFor(model => model.CallbackDateTime.Day);
-    var nameFieldForMonth = Html.NameFor(model => model.CallbackDateTime.Month);
-    var nameFieldForYear = Html.NameFor(model => model.CallbackDateTime.Year);
-    var nameFieldForHour = Html.NameFor(model => model.CallbackDateTime.Hour);
-    var nameFieldForMinute = Html.NameFor(model => model.CallbackDateTime.Minute);
+    var showErrorClassForDayInput = string.Empty;
+    var showErrorClassForMonthInput = string.Empty;
+    var showErrorClassForYearInput = string.Empty;
+    var showErrorClassForHourInput = string.Empty;
+    var showErrorClassForMinuteInput = string.Empty;
+    var nameFieldForDay = Html.NameFor(model => model.CallbackDateTime!.Day);
+    var nameFieldForMonth = Html.NameFor(model => model.CallbackDateTime!.Month);
+    var nameFieldForYear = Html.NameFor(model => model.CallbackDateTime!.Year);
+    var nameFieldForHour = Html.NameFor(model => model.CallbackDateTime!.Hour);
+    var nameFieldForMinute = Html.NameFor(model => model.CallbackDateTime!.Minute);
     var errorKeys = new[] { Html.NameFor(model => model.CallbackDateTime), nameFieldForDay, nameFieldForMonth, nameFieldForYear, nameFieldForHour, nameFieldForMinute, };
 
     foreach (var errorKey in errorKeys)
@@ -23,27 +24,37 @@
             {
                 if (errorKey.Equals(nameFieldForDay, StringComparison.OrdinalIgnoreCase))
                 {
-                    showErrorClassForDay = govukErrorClass;
+                    showErrorClassForDayInput = govukInputErrorClass;
+                    showErrorClass = govukFormGroupErrorClass;
                 }
                 else if (errorKey.Equals(nameFieldForMonth, StringComparison.OrdinalIgnoreCase))
                 {
-                    showErrorClassForMonth = govukErrorClass;
-                }
-                else if (errorKey.Equals(nameFieldForHour, StringComparison.OrdinalIgnoreCase))
-                {
-                    showErrorClassForHour = govukErrorClass;
-                }
-                else if (errorKey.Equals(nameFieldForMinute, StringComparison.OrdinalIgnoreCase))
-                {
-                    showErrorClassForMinute = govukErrorClass;
+                    showErrorClassForMonthInput = govukInputErrorClass;
+                    showErrorClass = govukFormGroupErrorClass;
                 }
                 else if (errorKey.Equals(nameFieldForYear, StringComparison.OrdinalIgnoreCase))
                 {
-                    showErrorClassForYear = govukErrorClass;
+                    showErrorClassForYearInput = govukInputErrorClass;
+                    showErrorClass = govukFormGroupErrorClass;
+                }
+                else if (errorKey.Equals(nameFieldForHour, StringComparison.OrdinalIgnoreCase))
+                {
+                    showErrorClassForHourInput = govukInputErrorClass;
+                    showErrorClass = govukFormGroupErrorClass;
+                }
+                else if (errorKey.Equals(nameFieldForMinute, StringComparison.OrdinalIgnoreCase))
+                {
+                    showErrorClassForMinuteInput = govukInputErrorClass;
+                    showErrorClass = govukFormGroupErrorClass;
                 }
                 else
                 {
-                    showErrorClass = govukErrorClass;
+                    showErrorClassForDayInput = govukInputErrorClass;
+                    showErrorClassForMonthInput = govukInputErrorClass;
+                    showErrorClassForYearInput = govukInputErrorClass;
+                    showErrorClassForHourInput = govukInputErrorClass;
+                    showErrorClassForMinuteInput = govukInputErrorClass;
+                    showErrorClass = govukFormGroupErrorClass;
                 }
             }
         }
@@ -56,77 +67,67 @@
     </h2>
 
     @Html.ValidationMessageFor(model => model.CallbackDateTime, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime) + "-error" })
-    @Html.ValidationMessageFor(model => model.CallbackDateTime.Day, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime.Day) + "-error" })
-    @Html.ValidationMessageFor(model => model.CallbackDateTime.Month, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime.Month) + "-error" })
-    @Html.ValidationMessageFor(model => model.CallbackDateTime.Year, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime.Year) + "-error" })
-    @Html.ValidationMessageFor(model => model.CallbackDateTime.Hour, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime.Hour) + "-error" })
-    @Html.ValidationMessageFor(model => model.CallbackDateTime.Minute, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime.Minute) + "-error" })
+    @Html.ValidationMessageFor(model => model.CallbackDateTime!.Day, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime!.Day) + "-error" })
+    @Html.ValidationMessageFor(model => model.CallbackDateTime!.Month, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime!.Month) + "-error" })
+    @Html.ValidationMessageFor(model => model.CallbackDateTime!.Year, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime!.Year) + "-error" })
+    @Html.ValidationMessageFor(model => model.CallbackDateTime!.Hour, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime!.Hour) + "-error" })
+    @Html.ValidationMessageFor(model => model.CallbackDateTime!.Minute, string.Empty, new { @class = "govuk-error-message", @id = Html.NameFor(model => model.CallbackDateTime!.Minute) + "-error" })
 
     <div class="govuk-date-input" id="@Html.NameFor(model => model.CallbackDateTime)">
         <div class="govuk-date-input__item">
-            <div class="govuk-form-group @showErrorClassForDay">
-                @Html.LabelFor(model => model.CallbackDateTime.Day, new { @class = "govuk-label govuk-date-input__label" })
-                @Html.TextBoxFor(model => model.CallbackDateTime.Day, new
-                {
-                    @class = "govuk-input govuk-date-input__input govuk-input--width-2",
-                    autocomplete = "off",
-                    type = "text",
-                    pattern = "[0-9]*",
-                    inputmode = "numeric"
-                })
-            </div>
+            @Html.LabelFor(model => model.CallbackDateTime!.Day, new { @class = "govuk-label govuk-date-input__label" })
+            @Html.TextBoxFor(model => model.CallbackDateTime!.Day, new
+            {
+                @class = "govuk-input govuk-date-input__input govuk-input--width-2 " + showErrorClassForDayInput,
+                autocomplete = "off",
+                type = "text",
+                pattern = "[0-9]*",
+                inputmode = "numeric"
+            })
         </div>
         <div class="govuk-date-input__item">
-            <div class="govuk-form-group @showErrorClassForMonth">
-                @Html.LabelFor(model => model.CallbackDateTime.Month, new { @class = "govuk-label govuk-date-input__label" })
-                @Html.TextBoxFor(model => model.CallbackDateTime.Month, new
-                {
-                    @class = "govuk-input govuk-date-input__input govuk-input--width-2",
-                    autocomplete = "off",
-                    type = "text",
-                    pattern = "[0-9]*",
-                    inputmode = "numeric"
-                })
-            </div>
+            @Html.LabelFor(model => model.CallbackDateTime!.Month, new { @class = "govuk-label govuk-date-input__label" })
+            @Html.TextBoxFor(model => model.CallbackDateTime!.Month, new
+            {
+                @class = "govuk-input govuk-date-input__input govuk-input--width-2 " + showErrorClassForMonthInput,
+                autocomplete = "off",
+                type = "text",
+                pattern = "[0-9]*",
+                inputmode = "numeric"
+            })
         </div>
         <div class="govuk-date-input__item">
-            <div class="govuk-form-group @showErrorClassForYear">
-                @Html.LabelFor(model => model.CallbackDateTime.Year, new { @class = "govuk-label govuk-date-input__label" })
-                @Html.TextBoxFor(model => model.CallbackDateTime.Year, new
-                {
-                    @class = "govuk-input govuk-date-input__input govuk-input--width-4",
-                    autocomplete = "off",
-                    type = "text",
-                    pattern = "[0-9]*",
-                    inputmode = "numeric"
-                })
-            </div>
+            @Html.LabelFor(model => model.CallbackDateTime!.Year, new { @class = "govuk-label govuk-date-input__label" })
+            @Html.TextBoxFor(model => model.CallbackDateTime!.Year, new
+            {
+                @class = "govuk-input govuk-date-input__input govuk-input--width-4 " + showErrorClassForYearInput,
+                autocomplete = "off",
+                type = "text",
+                pattern = "[0-9]*",
+                inputmode = "numeric"
+            })
         </div>
         <div class="govuk-date-input__item">
-            <div class="govuk-form-group @showErrorClassForHour">
-                @Html.LabelFor(model => model.CallbackDateTime.Hour, new { @class = "govuk-label govuk-date-input__label" })
-                @Html.TextBoxFor(model => model.CallbackDateTime.Hour, new
-                {
-                    @class = "govuk-input govuk-date-input__input govuk-input--width-2",
-                    autocomplete = "off",
-                    type = "text",
-                    pattern = "[0-9]*",
-                    inputmode = "numeric"
-                })
-            </div>
+            @Html.LabelFor(model => model.CallbackDateTime!.Hour, new { @class = "govuk-label govuk-date-input__label" })
+            @Html.TextBoxFor(model => model.CallbackDateTime!.Hour, new
+            {
+                @class = "govuk-input govuk-date-input__input govuk-input--width-2 " + showErrorClassForHourInput,
+                autocomplete = "off",
+                type = "text",
+                pattern = "[0-9]*",
+                inputmode = "numeric"
+            })
         </div>
         <div class="govuk-date-input__item">
-            <div class="govuk-form-group @showErrorClassForMinute">
-                @Html.LabelFor(model => model.CallbackDateTime.Minute, new { @class = "govuk-label govuk-date-input__label" })
-                @Html.TextBoxFor(model => model.CallbackDateTime.Minute, new
-                {
-                    @class = "govuk-input govuk-date-input__input govuk-input--width-2",
-                    autocomplete = "off",
-                    type = "text",
-                    pattern = "[0-9]*",
-                    inputmode = "numeric"
-                })
-            </div>
+            @Html.LabelFor(model => model.CallbackDateTime!.Minute, new { @class = "govuk-label govuk-date-input__label" })
+            @Html.TextBoxFor(model => model.CallbackDateTime!.Minute, new
+            {
+                @class = "govuk-input govuk-date-input__input govuk-input--width-2 " + showErrorClassForMinuteInput,
+                autocomplete = "off",
+                type = "text",
+                pattern = "[0-9]*",
+                inputmode = "numeric"
+            })
         </div>
     </div>
 </div>
